--- a/about.html
+++ b/about.html
@@ -1073,8 +1073,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-14.jpg" height="229"
-                                    width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10216818647876525.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-.row -->
@@ -1092,7 +1091,7 @@
                             <br>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-15.jpg"
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216818732598643.jpg"
                                     width="300">
                                 <br>
                                 <p>The superb interior of one of our cottages</p>
@@ -1109,7 +1108,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-16.jpg" height="229"
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10216820466121980.jpg" height="229"
                                     width="398">
                             </div>
                         </div><!-- end-col-12 -->
@@ -1122,7 +1121,7 @@
                             <br>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216824137333758.jpg width="300">
                                 <br>
                                 <p>The superb interior of one of our cottages</p>
                             </div><!-- end_left-col -->
@@ -1138,7 +1137,7 @@
                             <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="./bda-17.jpg" height="229" width="398">
+                                <img title="Devon countryside" alt="Devon countryside" src="images/10216825016115727.jpg" height="229" width="398">
                             </div>
                         </div><!-- end col-11 -->
                     </div> <!-- end class row -->
@@ -1148,7 +1147,7 @@
                     <div class="col-11">
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-18.jpg"
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216839018785785.jpg"
                                 width="300">
                             <br>
                             <p>The superb interior of one of our cottages</p>
@@ -1165,7 +1164,7 @@
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">
                             <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="./bda-19.jpg" height="229"
+                            <img title="Devon countryside" alt="Devon countryside" src="images/10216852838771276.jpg" height="229"
                                 width="398">
                         </div>
                         <div class="col-3">
@@ -1182,7 +1181,7 @@
                         <h2>We're flying around the globe</h2>
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-20.jpg"
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216856339058781.jpg"
                                 width="300">
                             <br>
                             <p>The superb interior of one of our cottages</p>
@@ -1199,7 +1198,7 @@
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">./bda-14.jpg
                             <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="./bda-21.jpg" height="229"
+                            <img title="Devon countryside" alt="Devon countryside" src="images/10216858825600943.jpg" height="229"
                                 width="398">
                         </div>
 
@@ -1218,7 +1217,7 @@
                         <h2>Above the clouds &amp; over the sea.</h2>
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-22.jpg"
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216862221645842.jpg"
                                 width="300">
                             <br>
                             <p>The superb interior of one of our cottages</p>
@@ -1235,7 +1234,7 @@
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">
                             <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
+                            <img title="Devon countryside" alt="Devon countryside" src="images/10216881401845335.jpg" height="229"
                                 width="398">
                         </div>
 
@@ -1250,7 +1249,7 @@
                         <h2>In just 42 hours and 27 minutes</h2>
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
-                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
+                            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216887774604650.jpg"
                                 width="300">
                             <br>
                             <p>The superb interior of one of our cottages</p>
@@ -1267,7 +1266,7 @@
                         <!--</div> removed and replaced with </nav>-->
                         <div class="data" id="html5style2midcol">
                             <h3>Situated in the BDA's beautiful countryside</h3>
-                            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229"
+                            <img title="Devon countryside" alt="Devon countryside" src="images/10216906473592113.jpg" height="229"
                                 width="398">
                         </div>
                         <div class="col-3">
@@ -1404,7 +1403,7 @@
                     <img src="img/paper.png">
                     <div class="data" id="html5style2leftcol">
                         <h3>Cottages, converted barns, caravans</h3>
-                        <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                        <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216908232996097.jpg" width="300">
                         <br><p>The superb interior of one of our cottages</p>
                     </div><!-- end_left-col -->
                     <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
@@ -1419,7 +1418,7 @@
                     <!--</div> removed and replaced with </nav>-->
                     <div class="data" id="html5style2midcol">
                         <h3>Situated in the BDA's beautiful countryside</h3>
-                        <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                        <img title="Devon countryside" alt="Devon countryside" src="images/10216908699007747.jpg" height="229" width="398">
                     </div>
                 </div><!-- end-col-12 -->
             </div><!-- end-row -->
@@ -1429,7 +1428,7 @@
                 <div class="çol-12">
                     <div class="data" id="html5style2leftcol">
                         <h3>Cottages, converted barns, caravans</h3>
-                        <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                        <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216912018210725-DESKTOP-V9R8I73.jpg" width="300">
                         <br><p>The superb interior of one of our cottages</p>
                     </div><!-- end_left-col -->
                     <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
@@ -1444,7 +1443,7 @@
                     <!--</div> removed and replaced with </nav>-->
                     <div class="data" id="html5style2midcol">
                         <h3>Situated in the BDA's beautiful countryside</h3>
-                        <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                        <img title="Devon countryside" alt="Devon countryside" src="images/10216913383204849.jpg" height="229" width="398">
                     </div>
                 </div><!-- end-col-12 -->
             </div><!-- end-row -->
