--- a/index.html
+++ b/index.html
@@ -342,7 +342,28 @@
                             <p class="advert">Web Design by Orris Baker</p>
                         </div>
                         <br class="clear">
-                        <div class="data" id="gallery-pagemidcol">
+							
+	                    <div class="data" id="gallery-pagemidcol">
+                            <div class="data" id="gallery-pagegallery-block">
+                                <ul id="gallerypagecol-1">
+                                <li><a href="#"><img src="./1landscape.jpg" width="70px" height="103px" alt="Ali" title="Ali"><img class="hid" src="./1landscape.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="./2landscape.jpg" width="69px" height="91px" alt="Cat" title="Cat"><img class="hid" src="./2landscape.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="./3landscape.jpg" width="75px" height="95px" alt="Beach" title="Beach"><img class="hid" src="./3landscape.jpg"" alt=""></a></li>
+                            </ul>
+                            <ul id="col-2">
+                                <li><a href="#"><img src="./4landscape.jpg" width="73px" height="103px" alt="Ferns" title="Ferns"><img class="hid" src="./4landscape.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="./5landscape.jpg" width="74px" height="91px" alt="Nico" title="Nico"><img class="hid" src="./5landscape.jpg" alt=""></a> </li>
+                                <li><a href="#"><img src="./6landscape.jpg" width="76px" height="59px" alt="Child and Beach" title="Child and Beach"><img class="hid" src="./6landscape.jpg" alt=""></a></li>
+                            </ul>
+                            <ul id="col-3">
+                                <li><a href="#"><img src="./7landscape.jpg" width="83px" height="103px" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="./7landscape.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="./8landscape.jpg" width="80px" height="91px" alt="Felix" title="Felix"><img class="hid" src="./8landscape.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="./9landscape.jpg" width="79px" height="95px" alt="Cliffs" title="Cliffs"><img class="hid" src="./9landscape.jpg" alt=""></a></li>
+                            </ul>
+                            <br class="clear">
+                        </div><!--gallery block closed -->
+                    </div><!--midcol closed -->
+                       <!-- <div class="data" id="gallery-pagemidcol">
                             <div class="data" id="gallery-pagegallery-block">
                                 <ul id="gallerypagecol-1">
                                     <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
