--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
+		<!-- lightbox -->
+        <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+        <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8" />
+        <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="script.js"></script>
+		<!-- end lightbox -->
+		
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
