--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<!-- lightbox -->
 	    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8" />
-        <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="script.js"></script>
+        <script src="./jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="scripts.js"></script>
 		<!-- end lightbox -->
 		
 		<meta charset="utf-8">
