--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
     </head>
     <body>
 		<div id="container">
+            <img class="logo" src="./img/flexy-logo.png">
             <div id="header">
                 <!-- <h1>StarTrackr!</h1> -->
                 <div class="row">
@@ -368,11 +369,11 @@
                             </ul>
                         </nav>
 				    </div><!-- end-col-12 -->
-                </div><!-- end-row -->
+                </div><!-- end-row --
 			
 				<div class="row">
                     <div class="col-12">
-				        <header data-role="header" id="html5-style-2header" class="data"><!-- <div id="hdr"> changed to <header> -->
+				        <header data-role="header" id="html5-style-2header" class="data"><!-- <div id="hdr"> changed to <header> --
 				            <hgroup>  
 						        <h1 class="veryimportant heading stuff" id="html5-style-2h1">Tourorris Rural Retreats!</h1>
 						        <h2 class="heading" id="html5-style-2h2"><strong>StarTrackr!</strong></h2>
@@ -380,7 +381,7 @@
 					        <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
                             <br>Orris</p>
 				        </header>
-					</div><!-- end-col-12 -->
+					</div><!-- end-col-12 --
                 </div><!-- end-row -->
 					
 	            <div id="#html5-style-2content" class="data">
