--- a/index.html
+++ b/index.html
@@ -244,6 +244,24 @@
 					</div><!-- end-col-12 -->
                 </div><!-- end-row -->
             </div>
+            <div class="row">
+                    <div class="col-12">
+                        <nav role="navigation" id="nav" class="data">
+                            <input class="trigger" type="checkbox" id="mainNavButton">
+                            <label for="mainNavButton" onclick>Menu</label>
+                            <ul>
+                                <li><a href="./index.html">Home</a></li>
+                                <li><a href="./about.html">About Us</a></li>
+                                <li><a href="./membership.html">Membership</a></li>
+                                <li><a href="./news.html">News</a></li>
+                                <li><a href="./starter-page.html">Specials</a></li>
+					            <li><a href="./index[1].html">Blog</a></li>
+					            <li><a href="./index2.html">Products</a></li>
+								<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> -->
+                            </ul>
+                        </nav>
+				    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
             <div id="content">
                 <h2>Welcome!</h2>
                 <div id="navigation">
