--- a/index.html
+++ b/index.html
@@ -278,26 +278,27 @@
                 <div class="row">
                         <div class="col-12">
                             <img src="img/kite.png">
-							<h2>Award winning accommodation, self catering or bed and breakfast</h2> 
+							<!-- <h2>Award winning accommodation, self catering or bed and breakfast</h2> 
                             <div class="data" id="html5-style-2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
                                 <br>The superb interior of one of our cottages
                             </div>
-                            <nav id="html5-style-2nav" class="data"><!--use the semantic tag <nav>-->
-                                <ul><!--start of menu list-->
+                            <nav id="html5-style-2nav" class="data"><!--use the semantic tag <nav>--
+                                <ul><!--start of menu list--
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                                </ul><!--end of menu list-->
+                                </ul><!--end of menu list--
                             </nav>
-                            <!--</div> removed and replaced with </nav>-->
+                            <!--</div> removed and replaced with </nav>--
                             <div id="html5-style-2midcol" class="data">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
                                 <img title="Devon countryside" alt="Devon countryside" src="images/10205318197012441.jpg" height="229" width="398">
                             </div>
+                        -->
                         </div>
 		            </div>
                     <br class="clear">
@@ -397,7 +398,7 @@
 	            <div id="#html5-style-2content" class="data">
 					<div class="row">
                         <div class="col-12">
-                            <img src="img/kite.png">
+                            <!-- <img src="img/kite.png"> -->
 							<h2>Award winning accommodation, self catering or bed and breakfast</h2> 
                             <div class="data" id="html5-style-2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
