--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
                                 <h3>Situated in the BDA's beautiful countryside</h3>
                                 <img title="Devon countryside" alt="Devon countryside" src="images/10205318197012441.jpg" height="229" width="398">
                             </div>
-                        </div>
-		            </div>
+                        
+		            
                     <br class="clear">
                 <div id="news">
                     <h2>Latest News</h2>
@@ -410,6 +410,8 @@
             <p id="fine_print">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.    
             </p>
+        </div><!-- end content -->
+
         </div>
 
         <div id="footer">
