--- a/index.html
+++ b/index.html
@@ -880,8 +880,7 @@
                             <h2>Above the clouds &amp; over the sea.</h2>
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10205480303825010.jpg"
-                                    width="300">
+                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10205480303825010.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
                             </div><!-- end_left-col -->
