--- a/index.html
+++ b/index.html
@@ -6,17 +6,26 @@
         <!-- Viewport for responsive web design -->
 		<!-- lightbox -->
 	    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-        <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8" />
-        
-        <script src="./jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">      
+        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
+		<script type="text/javascript" src="scripts.js"></script>
 		<!-- end lightbox -->
 
         <!-- colorbox -->		
         <link rel="stylesheet" href="CSS/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
-
         <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="scripts.js"></script>
 		<!-- end colorbox -->
+		
+        <!-- jcrop -->
+		<link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8"/>	
+        <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8"/>
+  
+        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
+        <script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript" src="scripts.js"></script>
+        <!-- end jcrop -->
+		
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
@@ -305,6 +314,11 @@
                 <p id="disclaimer">
                     Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like people so their privacy should be respected.
                 </p>
+
+				<div id="crop">
+                    <img id="mofat" src="images/mofat_400.jpg" alt="Mo'Fat"/>
+                    <input type="button" value="crop"/>  
+                </div>
                
                 <div id="news">
                     <h2>Latest News</h2>
