--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		
         <!-- jcrop -->
 		<link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8"/>	
-        <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8"/>
+        <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8"/>
   
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
         <script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
@@ -243,10 +243,10 @@
                 <div class="row">
                     <div class="col-12">
 				        <header data-role="header" id="html5-style-2header" class="data"><!-- <div id="hdr"> changed to <header> -->
-				            <hgroup>  
+				             
 						        <h1 class="veryimportant heading stuff" id="html5-style-2h1">Tourorris Rural Retreats!</h1>
-						        <h2 class="heading" id="html5-style-2h2"><strong>StarTrackr!</strong></h2>
-					        </hgroup>
+						        <!--<h2 class="heading" id="html5-style-2h2"><strong>StarTrackr!</strong></h2> -->
+					        
 					        <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
                             <br>Orris</p>
 				        </header>
