--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
         <!-- jcrop -->
 		<link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8"/>	
         <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8"/>
-  
-        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
         <script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="scripts.js"></script>
         <!-- end jcrop -->
-		
+		<!-- chapter_04/04_rollover_fade/ -->
+	    <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8"/>
+	    <script type="text/javascript" src="script.js"></script>
+		<!-- end rollover_fade -->
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
