--- a/index.html
+++ b/index.html
@@ -317,6 +317,10 @@
                 <p id="disclaimer">
                     Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like people so their privacy should be respected.
                 </p>
+				<span id="fader">
+                    <img id="glenda" src="../../images/glenda_200.jpg" alt="Glendatronix"/>
+                    <img class="to" src="../../images/fader_200.jpg" />
+                </span>
 
 				<div id="crop">
                     <img id="mofat" src="images/mofat_400.jpg" alt="Mo'Fat"/>
