--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		<script type="text/javascript" src="scripts.js"></script>
         <!-- end jcrop -->
 		<!-- chapter_04/04_rollover_fade/ -->
-	    <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8"/>
-	    <script type="text/javascript" src="script.js"></script>
+	    <link rel="stylesheet" href="CSS/style.css" type="text/css" media="screen" charset="utf-8"/>
+	    <script type="text/javascript" src="scripts.js"></script>
 		<!-- end rollover_fade -->
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
