--- a/index.html
+++ b/index.html
@@ -237,6 +237,10 @@
         <![endif]-->
     </head>
     <body>
+		 <div>
+             <div id="green" class="box">Go!</div>
+             <div id="red" class="box">Go!</div>
+        </div>
 		<div id="container">
             <img class="logo" src="./img/flexy-logo.png">
             <div id="header">
