--- a/index.html
+++ b/index.html
@@ -321,9 +321,17 @@
                 <p id="disclaimer">
                     Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like people so their privacy should be respected.
                 </p>
+				<h2>Celebrity Photos</h2>
+                <div id="photos">
+                    <img alt="Glendatronix" class="show" src="images/glenda_200.jpg" />
+                    <img alt="Darth Fader" src="images/fader_200.jpg" />
+                    <img alt="Beau Dandy" src="images/beau_200.jpg" />
+                    <img alt="Johnny Stardust" src="images/johnny_200.jpg" />
+                    <img alt="Mo' Fat" src="images/mofat_200.jpg" />
+                </div>
 				<span id="fader">
-                    <img id="glenda" src="../../images/glenda_200.jpg" alt="Glendatronix"/>
-                    <img class="to" src="../../images/fader_200.jpg" />
+                    <img id="glenda" src="images/glenda_200.jpg" alt="Glendatronix"/>
+                    <img class="to" src="images/fader_200.jpg" />
                 </span>
 
 				<div id="crop">
