--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	    <script type="text/javascript" src="scripts.js"></script>
 		<!-- end rollover_fade -->
 		<script src="jquery.innerfade.js" type="text/javascript" ></script>
+		<script src="jquery.cycle.all.min.js" type="text/javascript" ></script>
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
