--- a/index.html
+++ b/index.html
@@ -324,6 +324,14 @@
                     Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like people so their privacy should be respected.
                 </p>
 				<h2>Celebrity Photos</h2>
+				<div id="photos">
+                    <img id="glenda" alt="Glendatronix" src="images/glenda_200.jpg" alt="Glendatronix">
+                    <img alt="Darth Fader" src="images/fader_200.jpg">
+                    <img alt="Beau Dandy" src="images/beau_200.jpg">
+                    <img alt="Johnny Stardust" src="images/johnny_200.jpg">
+                    <img alt="Mo' Fat" src="images/mofat_200.jpg">
+                </div>
+				<!--
                 <div id="photos">
                     <img alt="Glendatronix" class="show" src="images/glenda_200.jpg" />
                     <img alt="Darth Fader" src="images/fader_200.jpg" />
@@ -331,14 +339,15 @@
                     <img alt="Johnny Stardust" src="images/johnny_200.jpg" />
                     <img alt="Mo' Fat" src="images/mofat_200.jpg" />
                 </div>
+				-->
 				<span id="fader">
-                    <img id="glenda" src="images/glenda_200.jpg" alt="Glendatronix"/>
-                    <img class="to" src="images/fader_200.jpg" />
+                    <img id="glenda" src="images/glenda_200.jpg" alt="Glendatronix">
+                    <img class="to" src="images/fader_200.jpg">
                 </span>
 
 				<div id="crop">
-                    <img id="mofat" src="images/mofat_400.jpg" alt="Mo'Fat"/>
-                    <input type="button" value="crop"/>  
+                    <img id="mofat" src="images/mofat_400.jpg" alt="Mo'Fat">
+                    <input type="button" value="crop">  
                 </div>
                
                 <div id="news">
