--- a/index.html
+++ b/index.html
@@ -323,6 +323,27 @@
                 <p id="disclaimer">
                     Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like people so their privacy should be respected.
                 </p>
+				<h2>Around Town Last Night</h2>
+                <div id="photos">
+                    <div id="photos_inner">
+                        <img alt="Glendatronix" src="images/glenda_100.jpg" />
+                        <img alt="Darth Fader" src="images/fader_100.jpg" />
+                        <img alt="Beau Dandy" src="images/beau_100.jpg" />
+                        <img alt="Johnny Stardust" src="images/johnny_100.jpg" />
+                        <img alt="Mo' Fat" src="images/mofat_100.jpg" />
+                        <img alt="Glendatronix" src="images/kellie_100.jpg" />
+                        <img alt="Darth Fader" src="images/fader_100.jpg" />
+                        <img alt="Beau Dandy" src="images/beau_100.jpg" />
+                        <img alt="Johnny Stardust" src="images/johnny_100.jpg" />
+                        <img alt="Mo' Fat" src="images/mofat_100.jpg" />
+                        <img alt="Glendatronix" src="images/kellie_100.jpg" />
+                        <img alt="Darth Fader" src="images/fader_100.jpg" />
+                        <img alt="Beau Dandy" src="images/beau_100.jpg" />
+                        <img alt="Johnny Stardust" src="images/johnny_100.jpg" />
+                        <img alt="Mo' Fat" src="images/mofat_100.jpg" />
+                    </div>
+                </div>
+				<!--
 				<h2>Celebrity Photos</h2>
 				<div id="photos">
                     <img id="glenda" alt="Glendatronix" src="images/glenda_200.jpg" alt="Glendatronix">
@@ -331,6 +352,7 @@
                     <img alt="Johnny Stardust" src="images/johnny_200.jpg">
                     <img alt="Mo' Fat" src="images/mofat_200.jpg">
                 </div>
+				-->
 				<!--
                 <div id="photos">
                     <img alt="Glendatronix" class="show" src="images/glenda_200.jpg" />
