--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         </div>
 		<div id="container">
             <img class="logo" src="./img/flexy-logo.png">
-            <div id="header">
+            <!-- <div id="header">
                 <!-- <h1>StarTrackr!</h1> -->
                 <div class="row">
                     <div class="col-12">
@@ -261,7 +261,7 @@
                             </header>
 					</div><!-- end-col-12 -->
                 </div><!-- end-row -->
-            </div>
+            
             <div class="row">
                 <div class="col-12">
                     <nav role="navigation" id="nav" class="data">
