--- a/about.html
+++ b/about.html
@@ -62,6 +62,7 @@
             <![endif]-->
     </head>
     <body>
+		<!--
         <div class="container">
 			<img class="logo" src="./img/flexy-logo.png">
 		    <div id="wrapper"> 
@@ -78,15 +79,15 @@
                                 <li><a href="./starter-page.html">Specials</a></li>
 					            <li><a href="./index[1].html">Blog</a></li>
 					            <li><a href="./index2.html">Products</a></li>
-								<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> -->
+								<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> --
                             </ul>
                         </nav>
-				    </div><!-- end-col-12 -->
-                </div><!-- end-row -->
+				    </div><!-- end-col-12 --
+                </div><!-- end-row --
 				
 				<div class="row">
                     <div class="col-12">
-				        <header data-role="header" class="data" id="html5-style-2header"><!-- <div id="hdr"> changed to <header> -->
+				        <header data-role="header" class="data" id="html5-style-2header"><!-- <div id="hdr"> changed to <header> --
 				            <hgroup>  
 						        <h1 class="veryimportant heading stuff" id="html5-style-2h1">Tourorris Rural Retreats!</h1>
 						        <h2 class="heading" id="html5-style-2h2"><strong>StarTrackr!</strong></h2>
@@ -94,13 +95,14 @@
 					        <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
                             <br>Orris</p>
 				        </header>
-					</div><!-- end-col-12 -->
-                </div><!-- end-row -->
+					</div><!-- end-col-12 --
+                </div><!-- end-row --
                 <br class="clear">	
 				
 	            <div class="data" id="#html5-style-2content">
-                   <!-- <h2>Get ready for take off.</h2> -->
-                    <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
+                   <!-- <h2>Get ready for take off.</h2> --
+                    <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;"> 
+		-->
                         <div class="çol-12">
                             <img src="img/paper.png" ;>
 							<!-- <h2>Award winning accommodation, self catering or bed and breakfast</h2> 
