--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
+		<script src="lib/jquery-1.8.17.custom.min.js" type="text/javascript" ></script>
 		
         <!-- Viewport for responsive web design -->
 		<!-- lightbox -->
@@ -37,7 +38,7 @@
 		<link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
         <!-- Viewport for responsive web design -->
         
-        <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
         <script type="text/javascript" src="./scripts.js"></script>
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
@@ -224,7 +225,7 @@
         <!-- SimpleLightbox plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
+        <link rel="stylesheet" href="jquery.mobile-1.0.min.css">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
