--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
 		<!-- end rollover_fade -->
 		<script src="jquery.innerfade.js" type="text/javascript" ></script>
 		<script src="jquery.cycle.all.min.js" type="text/javascript" ></script>
+		<script src="jquery-1.12.0.min.js" type="text/javascript" ></script>
+		<script src="jquery-1.7.1.min.js" type="text/javascript" ></script>
+		<script src="jquery-ui-1.8.17.custom.min.js" type="text/javascript" ></script>
+		<script src="jquery.color.js" type="text/javascript" ></script>
+		<script src="jquery.easing.1.3.js" type="text/javascript" ></script>
+		<script src="jquery.js" type="text/javascript" ></script>
+		<script src="jquery.jscrollpane.min.js" type="text/javascript" ></script>
+		<script src="jquery.min.js" type="text/javascript" ></script>
+		<script src="jquery.mobile-1.0.1.min.js" type="text/javascript" ></script>
+		<script src="jquery.mobile-1.0.min.js" type="text/javascript" ></script>
+		<script src="jquery.mousewheel.js" type="text/javascript" ></script>
+		<script src="jquery.scrollTo.js" type="text/javascript" ></script>
+		<!-- <script src="jquery.jscrollpane.css" type="text/javascript" ></script> jquery.mobile-1.0.1.min.css  jquery.mobile-1.0.min.css -->
+		
+		<script src="jquery.jscrollpane.min.js" type="text/javascript" ></script>
+		jquery.min.js
+		
 		
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -60,7 +77,7 @@
         <!-- Viewport for responsive web design -->
 	    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./js/scripts.js"></script>
+        <script type="text/javascript" src="js/scripts.js"></script>
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 	    <link rel="stylesheet" href="./style.css"> 
