--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	    <script type="text/javascript" src="./js/scripts.js"></script>
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
-        <!--   <link rel="stylesheet" href="./style.css"> 
+        <link rel="stylesheet" href="./style.css"> 
         <link rel="stylesheet" href="./style[1].css"> 
     
         <link rel="stylesheet" href="./nav[1].css">
@@ -179,7 +179,7 @@
 
 	    <link rel="stylesheet" type="text/css" href="./CSS/print.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/rosette.css">
-		<!--
+		
 	    <link rel="stylesheet" type="text/css" href="./CSS/search.css">
     	<link rel="stylesheet" type="text/css" href="./CSS/niftyCorners.css">
 	   
@@ -193,7 +193,7 @@
 	    <link rel="stylesheet" type="text/css" href="./CSS/sliding.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/squares-html5.css"> --
 	    <link rel="stylesheet" type="text/css" href="./CSS/squaretabs.css">
-		<!--
+		
 	    <link rel="stylesheet" type="text/css" href="./CSS/starter-page-style-2.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/starter-page-style-3.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/starter-page-style.css">
