--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 		<link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
 		<script src="lib/jquery-1.8.17.custom.min.js" type="text/javascript" ></script>
         <!-- Viewport for responsive web design -->
+		
+        <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8" />
+
+        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
+        <script src="jquery.scrollTo.js" type="text/javascript" charset="utf-8"></script>
+        
 		<!-- lightbox -->
 	    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">      
