--- a/index.html
+++ b/index.html
@@ -333,6 +333,22 @@
                     <img alt="Johnny Stardust" src="images/johnny_200.jpg">
                     <img alt="Mo' Fat" src="images/mofat_200.jpg">
                 </div>
+				 <h2>Around town last night</h2>
+                  <div id="photos">
+                      <a href="#" class="trigger">Image Gallery</a>
+                          <ul id="photos_inner">
+                              <li><img alt="Glendatronix" src="images/glenda_400.jpg" /></li>
+                              <li><img alt="Darth Fader" src="images/fader_400.jpg" /></li>
+                              <li><img alt="Beau Dandy" src="images/beau_400.jpg" /></li>
+                              <li><img alt="Johnny Stardust" src="images/johnny_400.jpg" /></li>
+                              <li><img alt="Mo' Fat" src="images/mofat_400.jpg" /></li>
+                              <li><img alt="Glendatronix" src="images/kellie_400.jpg" /></li>
+                              <li><img alt="Darth Fader" src="images/fader_400.jpg" /></li>
+                              <li><img alt="Beau Dandy" src="images/beau_400.jpg" /></li>
+                              <li><img alt="Johnny Stardust" src="images/johnny_400.jpg" /></li>
+                              <li><img alt="Mo' Fat" src="images/mofat_400.jpg" /></li>
+                        </ul>
+                    </div>
 				
 				<h2>Around Town Last Night</h2>
                 <div id="photos">
