--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                                 <input name="password" id="password" type="password" />
                             </div>
                             <div>
-                                <input type="submit" value="Log in!" />
+                                <input type="submit" value="Log in!">
                             </div>
                         </form>
                     </div>   			
