--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                     </nav>
 				</div><!-- end-col-12 -->
             </div><!-- end-row -->
-            <div id="content">
+            <div id="#html5-style-2content" class="data">
                 <h2>Welcome!</h2>
                 <div id="navigation">
                     <ul>
@@ -849,7 +849,7 @@
                                 <img title="Devon countryside" alt="Devon countryside" src="images/10204240696195594.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
-                    </div><!-- end-.row -->
+                    
                     <br class="clear">
             
 
@@ -1434,7 +1434,6 @@
                 <script src="../orris0/main.js"></script>
                 <a href="https://orris0.github.io/orris0/membership.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   
-            </div> <!-- end wrapper -->
 	    </div><!-- end-container -->
     </body><!-- end body  -->
 </html>
