--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
 		<link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
 		
         <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8" />  
-		<!-- lightbox --
+		<!-- lightbox -->
 	    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">      
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
 		<script type="text/javascript" src="scripts.js"></script>
 		<!-- end lightbox -->
 
-        <!-- colorbox --		
+        <!-- colorbox -->		
         <link rel="stylesheet" href="CSS/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
         <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="scripts.js"></script>
 		<!-- end colorbox -->
 		
-        <!-- jcrop --
+        <!-- jcrop -->
 		<link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8"/>	
         <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8"/>
         <script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="scripts.js"></script>
         <!-- end jcrop -->
-		<!-- chapter_04/04_rollover_fade/ --
+		<!-- chapter_04/04_rollover_fade/ -->
 	    <link rel="stylesheet" href="CSS/style.css" type="text/css" media="screen" charset="utf-8"/>
 	    <script type="text/javascript" src="scripts.js"></script>
-		<!-- end rollover_fade --
+		<!-- end rollover_fade -->
 		<script src="jquery.innerfade.js" type="text/javascript" ></script>
 		<script src="jquery.cycle.all.min.js" type="text/javascript" ></script>
 		<script src="jquery-1.12.0.min.js" type="text/javascript" ></script>
@@ -51,18 +51,16 @@
 		<script src="jquery.mobile-1.0.min.js" type="text/javascript" ></script>
 		<script src="jquery.mousewheel.js" type="text/javascript" ></script>
 		<script src="jquery.scrollTo.js" type="text/javascript" ></script>
-		<!-- <script src="jquery.jscrollpane.css" type="text/javascript" ></script> jquery.mobile-1.0.1.min.css  jquery.mobile-1.0.min.css --
+		<!-- <script src="jquery.jscrollpane.css" type="text/javascript" ></script> jquery.mobile-1.0.1.min.css  jquery.mobile-1.0.min.css -->
 		
 		<script src="jquery.jscrollpane.min.js" type="text/javascript" ></script>
-		
-        <!-- Viewport for responsive web design --
         
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
         <script type="text/javascript" src="./scripts.js"></script>
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
-        <!-- <link rel="stylesheet" href="style.css"> 
-        <link rel="stylesheet" href="style[1].css"> --
+        <link rel="stylesheet" href="style.css"> 
+        <link rel="stylesheet" href="style[1].css"> 
         
         <link rel="stylesheet" href="./nav[1].css">
 
