--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
         
-        <!-- Viewport for responsive web design --
+        <!-- Viewport for responsive web design -->
 	    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/scripts.js"></script>
@@ -96,7 +96,7 @@
         <link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
 
         <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
-        <!-- Viewport for responsive web design --
+        <!-- Viewport for responsive web design -->
         <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="scripts.js"></script>
@@ -215,17 +215,11 @@
 	    <link rel="stylesheet" type="text/css" href="./CSS/twoshad-whitebdr2.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/zebra.css">
 	
-        <!-- <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css"> 
+        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css"> 
 		
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-        --
         <link rel="stylesheet" href="./font-awesome.min[1].css">
-
-
-
-
-
-		
+	
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
 	    <meta property="og:title" content="A Basic HTML5 Template">
         <meta property="og:type" content="website">
