--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Gallery-page-Templates</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./js/scripts.js"></script>
 	    <meta charset="UTF-8">
 	    
