--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
         <!-- Viewport for responsive web design -->
         <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-        <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="scripts.js"></script>
 	    <script type="text/javascript" src="./js/scripts.js"></script>
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
