--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 	    <script type="text/javascript" src="./js/scripts.js"></script>
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
+        <!--
         <link rel="stylesheet" href="./style.css"> 
         <link rel="stylesheet" href="./style[1].css"> 
     
@@ -141,7 +142,7 @@
 	    <link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css"> 
 	    <link rel="stylesheet" type="text/css" href="./CSS/fixed-3d.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/fixed.css"> 	
-	    <link rel="stylesheet" type="text/css" href="./CSS/font-awesome.css"
+	    <link rel="stylesheet" type="text/css" href="./CSS/font-awesome.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/four-col-no-tables.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/fourside-drop10px.css"> 
 	    <link rel="stylesheet" type="text/css" href="./CSS/fourside-drop30px-fullpage.css">
@@ -216,7 +217,7 @@
 	    <link rel="stylesheet" type="text/css" href="./CSS/twoshad-whitebdr1.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/twoshad-whitebdr2.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/zebra.css">
-	
+	-->
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css"> 
 		
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
