--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<script src="jquery.jscrollpane.min.js" type="text/javascript" ></script>
         
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
-        <script type="text/javascript" src="./scripts.js"></script>
+        <script type="text/javascript" src="js./scripts.js"></script>
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
         <link rel="stylesheet" href="style.css"> 
