--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <!-- colorbox -->		
         <link rel="stylesheet" href="CSS/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
         <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="scripts.js"></script>
+        <script type="text/javascript" src="./scripts.js"></script>
 		<!-- end colorbox -->
 		
         <!-- jcrop -->
 		<link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8"/>	
         <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8"/>
         <script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
-		<script type="text/javascript" src="scripts.js"></script>
+		<script type="text/javascript" src="js/scripts.js"></script>
         <!-- end jcrop -->
 		<!-- chapter_04/04_rollover_fade/ -->
 	    <link rel="stylesheet" href="CSS/style.css" type="text/css" media="screen" charset="utf-8"/>
