--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	    <meta charset="UTF-8">
 	    
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+		<!-- <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css"> -->
 	
 		<link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
 		
-        <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8" />  
+        <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8" />  
 		<!-- lightbox -->
 	    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">      
