--- a/index.html
+++ b/index.html
@@ -299,6 +299,21 @@
             <![endif]-->
     </head>
     <body>
+		<!--
+		<div class="row">
+                <div class="col-12">
+		            <h2>Welcome!</h2>
+                    <div id="navigation">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Buy Now!</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Gift Ideas</a></li>
+                        </ul>
+                    </div>			    
+				</div><!-- end-col-12 --
+            </div><!-- end-row -->
+		-->
 		<div id="container">
 		    <div>
                 <div id="green" class="box">Go!</div>
@@ -340,15 +355,19 @@
 				</div><!-- end-col-12 -->
             </div><!-- end-row -->
             <div id="#html5-style-2content" class="data">
-                <h2>Welcome!</h2>
-                <div id="navigation">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Buy Now!</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Gift Ideas</a></li>
-                    </ul>
-                </div>
+                <div class="row">
+                    <div class="col-12">
+		                <h2>Welcome!</h2>
+                        <div id="navigation">
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Buy Now!</a></li>
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">Gift Ideas</a></li>
+                            </ul>
+                        </div>			    
+				    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
                 <p id="intro">
                     Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!    
                 </p>
