--- a/index.html
+++ b/index.html
@@ -302,15 +302,9 @@
 		<!--
 		<div class="row">
                 <div class="col-12">
-		            <h2>Welcome!</h2>
-                    <div id="navigation">
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Buy Now!</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Gift Ideas</a></li>
-                        </ul>
-                    </div>			    
+		            <p id="intro">
+                        Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!    
+                    </p>		    
 				</div><!-- end-col-12 --
             </div><!-- end-row -->
 		-->
@@ -368,9 +362,13 @@
                         </div>			    
 				    </div><!-- end-col-12 -->
                 </div><!-- end-row -->
-                <p id="intro">
-                    Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!    
-                </p>
+                <div class="row">
+                    <div class="col-12">
+		                <p id="intro">
+                            Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!    
+                        </p>		    
+				    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
                 <div class="row">
                         <div class="col-12">
                             <img src="img/kite.png">
