--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	    <meta charset="UTF-8">
 	    
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css"> -->
+		<!-- <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css"> 
 	
-		<link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+		<link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">-->
 		
         <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8" />  
 		<!-- lightbox -->
