--- a/index.html
+++ b/index.html
@@ -302,9 +302,14 @@
 		<!--
 		<div class="row">
                 <div class="col-12">
-		            <p id="intro">
-                        Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!    
-                    </p>		    
+		            <h2>Celebrity Photos</h2>
+				    <div id="photos">
+                        <img id="glenda" alt="Glendatronix" src="images/glenda_200.jpg" alt="Glendatronix">
+                        <img alt="Darth Fader" src="images/fader_200.jpg">
+                        <img alt="Beau Dandy" src="images/beau_200.jpg">
+                        <img alt="Johnny Stardust" src="images/johnny_200.jpg">
+                        <img alt="Mo' Fat" src="images/mofat_200.jpg">
+                    </div>		    
 				</div><!-- end-col-12 --
             </div><!-- end-row -->
 		-->
@@ -370,14 +375,27 @@
 				    </div><!-- end-col-12 -->
                 </div><!-- end-row -->
                 <div class="row">
-                        <div class="col-12">
-                            <img src="img/kite.png">
-                        </div>
-		            </div>
+                    <div class="col-12">
+                        <img src="img/kite.png">
+						<p id="disclaimer">
+                            Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like people so their privacy should be respected.
+                        </p>
+                    </div>
+		        </div>
+				<div class="row">
+                    <div class="col-12">
+		            <h2>Celebrity Photos</h2>
+				        <div id="photos">
+                            <img id="glenda" alt="Glendatronix" src="images/glenda_200.jpg" alt="Glendatronix">
+                            <img alt="Darth Fader" src="images/fader_200.jpg">
+                            <img alt="Beau Dandy" src="images/beau_200.jpg">
+                            <img alt="Johnny Stardust" src="images/johnny_200.jpg">
+                            <img alt="Mo' Fat" src="images/mofat_200.jpg">
+                        </div>		    
+				    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
                     <br class="clear">
-                <p id="disclaimer">
-                    Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like people so their privacy should be respected.
-                </p>
+                
 				
 				<h2>Celebrity Photos</h2>
 				<div id="photos">
