--- a/index.html
+++ b/index.html
@@ -579,6 +579,12 @@
 							
 	                    <div class="data" id="gallery-pagemidcol">
                             <div class="data" id="gallery-pagegallery-block">
+								<ul id="col-1">
+				                    <li><a href="#"><img src="images/alithumb.jpg" title="Ali" alt="Ali" /><img class="hid" src="images/alibig.jpg" alt="" /></a></li>
+				                    <li><a href="#"><img src="images/catthumb.jpg" title="Cat" alt="Cat" /><img class="hid" src="images/catbig.jpg" alt="" /></a></li>
+				                    <li><a href="#"><img src="images/beachthumb.jpg" title="Beach" alt="Beach" /><img class="hid" src="images/beachbig.jpg" alt="" /></a></li>
+			                    </ul>
+								<!--
                                 <ul id="gallerypagecol-1">
                                 <li><a href="#"><img src="./1landscape.jpg" width="70px" height="103px" alt="Ali" title="Ali"><img class="hid" src="./1landscape.jpg" alt=""></a></li>
                                 <li><a href="#"><img src="./2landscape.jpg" width="69px" height="91px" alt="Cat" title="Cat"><img class="hid" src="./2landscape.jpg" alt=""></a></li>
@@ -594,6 +600,7 @@
                                 <li><a href="#"><img src="./8landscape.jpg" width="80px" height="91px" alt="Felix" title="Felix"><img class="hid" src="./8landscape.jpg" alt=""></a></li>
                                 <li><a href="#"><img src="./9landscape.jpg" width="79px" height="95px" alt="Cliffs" title="Cliffs"><img class="hid" src="./9landscape.jpg" alt=""></a></li>
                             </ul>
+								-->
                             <br class="clear">
                         </div><!--gallery block closed -->
                     </div><!--midcol closed -->   
