--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
             </div><!-- end-col-12 -->
         </div><!-- end-row -->
 
-        <div data-role="content" class="data" id="html5-ch1-7content">
+        <div data-role="content" class="data" id="content">
             <b>
                 <p id="no-script">We recommend that you have JavaScript enabled!</p>
             </b>
@@ -797,29 +797,61 @@
 
             <p>&nbsp;</p>
             <p>&nbsp;</p>
+	 -->
                     <div class="row">
                         <div class="çol-12">
-                            <img src="img/kite.png">
-                            <div class="data" id="html5style2leftcol">
-                                <h3>Cottages, converted barns, caravans</h3>
-                                <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
-                                <br>
-                                The superb interior of one of our cottages
-                            </div><!-- end_left-col --
-                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>--
-                                <ul><!--start of menu list--
-                                    <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                                    <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                                    <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
-                                    <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
-                                    <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                                </ul><!--end of menu list--
-                            </nav>
-                            <!--</div> removed and replaced with </nav>--
-                            <div class="data" id="html5style2midcol">
-                                <h3>Situated in the BDA's beautiful countryside</h3>
-                                <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
-                            </div>
+                            <div class="col-11">		
+                        <header class="data" id="gallery-pageheader">
+                            <h1>A full page roll-over gallery of greetings cards</h1>
+                            <h2>Hover the mouse over a small picture to see an enlarged version</h2>
+                        </header> 
+                        <nav class="data" id="gallery-pagenav">
+                            <ul>
+                                <li class="btn"><a href="#">Page Two</a></li>
+                                <li class="btn"><a href="#">Page Three</a></li>
+                                <li class="btn"><a href="#">Page Four</a></li>
+                                <li class="btn"><a href="#">Home Page</a></li>
+                            </ul>
+                        </nav>
+                        <br class="clear">
+                        <div class="data" id="gallery-pagerightcol">
+                            <h4> StarTrackr</h4>
+                            <br><br>
+                            <p>
+                                <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5"></a>
+                            </p>
+                            <p>
+                                <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31" title="Valid CSS!" alt="Valid CSS!"></a>
+                                <span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
+                            </p>
+                            <br class="clear">
+                            <p class="advert">Web Design by Orris Baker</p>
+                        </div>
+                        <br class="clear">
+							
+	                    <div class="data" id="gallery-pagemidcol">
+                            <div class="data" id="gallery-pagegallery-block">
+                                <ul id="gallerypagecol-1">
+                                <li><a href="#"><img src="./1landscape.jpg" width="70px" height="103px" alt="Ali" title="Ali"><img class="hid" src="./1landscape.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="./2landscape.jpg" width="69px" height="91px" alt="Cat" title="Cat"><img class="hid" src="./2landscape.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="./3landscape.jpg" width="75px" height="95px" alt="Beach" title="Beach"><img class="hid" src="./3landscape.jpg"" alt=""></a></li>
+                            </ul>
+                            <ul id="col-2">
+                                <li><a href="#"><img src="./4landscape.jpg" width="73px" height="103px" alt="Ferns" title="Ferns"><img class="hid" src="./4landscape.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="./5landscape.jpg" width="74px" height="91px" alt="Nico" title="Nico"><img class="hid" src="./5landscape.jpg" alt=""></a> </li>
+                                <li><a href="#"><img src="./6landscape.jpg" width="76px" height="59px" alt="Child and Beach" title="Child and Beach"><img class="hid" src="./6landscape.jpg" alt=""></a></li>
+                            </ul>
+                            <ul id="col-3">
+                                <li><a href="#"><img src="./7landscape.jpg" width="83px" height="103px" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="./7landscape.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="./8landscape.jpg" width="80px" height="91px" alt="Felix" title="Felix"><img class="hid" src="./8landscape.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="./9landscape.jpg" width="79px" height="95px" alt="Cliffs" title="Cliffs"><img class="hid" src="./9landscape.jpg" alt=""></a></li>
+                            </ul>
+                            <br class="clear">
+                        </div><!--gallery block closed -->
+                    </div><!--midcol closed -->   
+                </div><!-- end col-11 -->
+            </div> <!-- end class row -->
+        </div> <!-- end class row -->
                         </div><!-- end-col-12 --
                     </div><!-- end-.row --
                     <br class="clear">
