--- a/index.html
+++ b/index.html
@@ -546,6 +546,7 @@
                     </div>
 		        </div>
                 <br class="clear">
+				<!-- one col -->
 					
                 <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                     <div class="col-11">		
@@ -589,7 +590,7 @@
                         </div><!--midcol closed -->   
                     </div><!-- end col-11 -->
                 </div> <!-- end class row -->
-				
+				<!-- two col -->
                 <div class="row" style="background-color: #F6931E;">
                         <div class="col-11">		
                            <header class="data" id="gallery-pageheader">
