--- a/index.html
+++ b/index.html
@@ -544,10 +544,10 @@
                         </header> 
                         <nav class="data" id="gallery-pagenav">
                             <ul>
-                                <li class="btn"><a href="#">Page Two</a></li>
-                                <li class="btn"><a href="#">Page Three</a></li>
-                                <li class="btn"><a href="#">Page Four</a></li>
-                                <li class="btn"><a href="#">Home Page</a></li>
+                                <li class="btn"><a href="#Page Two">Page Two</a></li>
+                                <li class="btn"><a href="#Page Three">Page Three</a></li>
+                                <li class="btn"><a href="#Page Four">Page Four</a></li>
+                                <li class="btn"><a href="#Home Page">Home Page</a></li>
                             </ul>
                         </nav>
                         <br class="clear">
